# athylen-ui

./: CMakeLists.txt  pubspec.yaml
lib/: animated_symbol.dart  image.dart  logo_animated.dart  main.dart  project.dart
lib/depend_graph/: edge.dart  graph.dart  node.dart  painter.dart  tick.dart
lib/outview/: outlook.dart  sight.dart  tab_button.dart  workspace.dart
lib/screen/: screen.dart  screen_controller.dart  screen_data.dart
lib/side_bar/: entry.dart  overlay_menu.dart  side_bar.dart
lib/title_bar/: title_bar.dart  window_management_button.dart
